clean up drowndown

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -8,18 +8,9 @@
 
   &__title {
     color: $color-blue-light;
-    font-size: 3.6em;
+    font-size: 2.4rem;
     font-weight: 600;
     margin: 0 auto;
     text-align: center;
-
-    @media (max-width: $breakpoint-tablet) {
-      font-size: 2em;
-    }
-
-    @media (max-width: $breakpoint-mobile) {
-      font-size: 1.6em;
-      margin: 0 20px;
-    }
   }
 }
