--- a/src/components/Dropdown/dropdown.scss
+++ b/src/components/Dropdown/dropdown.scss
@@ -11,10 +11,12 @@
     font-size: 1rem;
     font-weight: 600;
     margin-bottom: 0.5rem;
+    height: 1.5rem;
   }
 
   &__select {
     width: 100%;
     height: 3rem;
+    font-family: $font-main;
   }
 }
