--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,12 +8,14 @@ $breakpoint-desktop: 1180px;
 $breakpoint-tablet: 768px;
 $breakpoint-mobile: 640px;
 
+$font-main: 'Poppins', sans-serif;
+
 $base-transition: all 0.125s cubic-bezier(0.4, 0.0, 0.2, 1);
 
 body {
   background: $color-white;
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: $font-main;
   font-size: 62.5%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
